--- a/Notes/02_以太坊與智能合約基礎.md
+++ b/Notes/02_以太坊與智能合約基礎.md
@@ -45,3 +45,37 @@
 4. 透過合約介面與部署地址，與合約互動
 5. 互動時的交易也會被礦工認證
 6. 完成！
+
+## Q&A
+- 智能合約只會紀錄資料改變的動作，如果要讀取某個智能合約內的變數，必須要從該智能合約第一個區塊開始往後推才能取得所有交易過程資訊
+
+Q:資料到底被儲存在哪裡？被紀錄在區塊鏈上
+> 其實以太坊是有容量的概念(帳本是有實體空間的)
+
+Q:如果一直新增變數塞爆帳本？？？或是新增一個超大的資料在上面？
+> 一樣可以放，但你要付超高的手續費，也就是花錢（手續費）買儲存空間的概念
+p.s.現在以太坊的帳本大小大約只有678個block，2TB而已（其實銀行在紀錄的帳本也不會很大）
+    
+Q:帳本會不會大到礦工存不下？
+> 帳本的記憶體增加速度（線性）會小於硬體增加的速率（指數）（摩爾定律）
+
+Q:帳本既然紀錄了非常大的資訊，那一般人也需要儲存這些資訊嗎？
+> 不用，只有礦工會記錄這些帳本
+如果只是使用者的話，我們不需要記錄這些帳本，只要付出手續費給礦工幫忙驗證這些交易就好
+
+Q:區塊鏈製造亂數？都是騙人的
+> 如果是利用區塊鏈的內部時間產生亂數，那都是可預期的(礦工可以估計生出時間)
+如果要使用亂數，需要使用鏈外的方法產生亂數 
+
+Q:小數轉整數是四捨五入，可能會有誤差，在計算ETH時該如何計算？
+> 通常都會平移ETH變成整數來計算
+通常都是用以太幣的最小單位(Wei)來計算
+
+Q:部署到區塊鏈上的計價是以容量來計還是以有多少的函數功能來計算?
+可以分層兩個層面
+> 執行智能合約的GAS。在合約上的每一個步驟『定義變數、計算等等的』都需要消耗GAS，可參考這裡。
+你希望給礦工的GAS。換句話來說，當非常塞車的時候而且你希望的 transaction被礦工優先處理，你就需要給更高的GAS FEE
+
+當前區塊鏈兩大問題：
+1. 用戶群不夠（普及率不夠）
+2. 虛擬貨幣浮動太大（Ex比特幣)，導致流通意願減少（預期心理：大家怕明天暴漲就不敢花）
